--- a/AngleVelo_data.Rmd
+++ b/AngleVelo_data.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "savant_data"
+title: "AngleVelo_data"
 author: "Tae Hoon Han"
-date: "February 28, 2017"
+date: ""March 22, 2017"
 output: html_document
 ---
 
